--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <title>Document</title>
     </head>
     <body>
-        <main id="main"></main>
+        <main id="main">
+            <div id="img-div"></div>
+        </main>
     </body>
 </html>
