Completed User Stories 4 and 5

--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     </head>
     <body>
         <main id="main">
-            <div id="img-div"></div>
+            <div id="img-div">
+                <figure>
+                    <img id="image" />
+                    <figcaption id="img-caption"></figcaption>
+                </figure>
+            </div>
         </main>
     </body>
 </html>
