--- a/index.html
+++ b/index.html
@@ -7,12 +7,19 @@
     </head>
     <body>
         <main id="main">
+            <h1 id="title">Tribute Page</h1>
             <div id="img-div">
                 <figure>
                     <img id="image" />
-                    <figcaption id="img-caption"></figcaption>
+                    <figcaption id="img-caption">Lorem ipsum dolor sit amet.</figcaption>
                 </figure>
             </div>
+            <section id="tribute-info">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio quaerat laudantium aspernatur mollitia modi voluptatum similique.
+                    Provident repellat saepe ut quia totam veritatis eos libero, corrupti, ipsa similique incidunt ratione.
+                </p>
+            </section>
         </main>
     </body>
 </html>
