Completed user story 7

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio quaerat laudantium aspernatur mollitia modi voluptatum similique.
                     Provident repellat saepe ut quia totam veritatis eos libero, corrupti, ipsa similique incidunt ratione.
                 </p>
+                <a href="https://www.freecodecamp.org/" target="_blank" id="tribute-link">Free Code Camp</a>
             </section>
         </main>
     </body>
