--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
             <h1 id="title">Tribute Page</h1>
             <div id="img-div">
                 <figure>
-                    <img id="image" />
+                    <img
+                        src="https://www.incimages.com/uploaded_files/image/1920x1080/getty_485008244_105123.jpg"
+                        id="image"
+                        style="max-width: 100%; text-align: center"
+                    />
                     <figcaption id="img-caption">Lorem ipsum dolor sit amet.</figcaption>
                 </figure>
             </div>
